manifests/gitea/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "6"
      field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"gitea:gitea","ingressName":"gitea:gitea","hostname":"gitea.35.241.255.137.nip.io","path":"/","allNodes":false}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"gitea","namespace":"gitea"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"gitea"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"labels":{"app":"gitea"}},"spec":{"containers":[{"env":[{"name":"USER_UID","value":"1000"},{"name":"USER_GID","value":"1000"},{"name":"GITEA__server__ROOT_URL","value":"https://gitea.35.241.255.137.nip.io/"},{"name":"GITEA__server__DOMAIN","value":"gitea.35.241.25 [...]
    name: gitea
    namespace: gitea
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: gitea
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-04-20T16:40:28Z"
        labels:
          app: gitea
      spec:
        containers:
        - env:
          - name: USER_UID
            value: "1000"
          - name: USER_GID
            value: "1000"
          - name: GITEA__server__ROOT_URL
            value: https://gitea.35.241.255.137.nip.io/
          - name: GITEA__server__DOMAIN
            value: gitea.35.241.255.137.nip.io
          - name: GITEA__server__SSH_DOMAIN
            value: gitea.35.241.255.137.nip.io
          - name: GITEA__service__DISABLE_REGISTRATION
            value: "true"
          - name: GITEA__database__DB_TYPE
            value: sqlite3
          - name: GITEA__webhook__ALLOWED_HOST_LIST
            value: '*'
          - name: GITEA__webhook__SKIP_TLS_VERIFY
            value: "true"
          image: gitea/gitea:1.24.0
          imagePullPolicy: IfNotPresent
          name: gitea
          ports:
          - containerPort: 3000
            name: http
            protocol: TCP
          - containerPort: 22
            name: ssh
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data
            name: data
        dnsPolicy: ClusterFirst
        nodeSelector:
          piraeus.io/storage: "yes"
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 1000
        terminationGracePeriodSeconds: 30
        volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-data-piraeus
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-04-19T22:31:33Z"
      lastUpdateTime: "2026-04-22T16:49:37Z"
      message: ReplicaSet "gitea-8598474664" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-04-26T19:53:43Z"
      lastUpdateTime: "2026-04-26T19:53:43Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 11
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
