manifests/gitea/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"gitea","namespace":"gitea"},"spec":{"ports":[{"name":"http","port":3000,"targetPort":3000},{"name":"ssh","port":22,"targetPort":22}],"selector":{"app":"gitea"}}}
    name: gitea
    namespace: gitea
  spec:
    clusterIP: 10.105.125.67
    clusterIPs:
    - 10.105.125.67
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: 22
    selector:
      app: gitea
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
