manifests/gitea/ingresses.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"gitea:gitea","ingressName":"gitea:gitea","hostname":"gitea.35.241.255.137.nip.io","path":"/","allNodes":false}]'
      nginx.ingress.kubernetes.io/proxy-body-size: 512m
    name: gitea
    namespace: gitea
  spec:
    ingressClassName: nginx
    rules:
    - host: gitea.35.241.255.137.nip.io
      http:
        paths:
        - backend:
            service:
              name: gitea
              port:
                number: 3000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - gitea.35.241.255.137.nip.io
      secretName: tls-gitea
  status:
    loadBalancer:
      ingress:
      - ip: 35.241.255.137
kind: List
metadata:
